# serverless-image-processing

./: .coverage  .gitignore  .pre-commit-config.yaml  .yamllint.yml  Makefile  README.md  TODO  environment.yml  package-lock.json  package.json  pyproject.toml  serverless.yml
image_processing/: crud.py  daily_stats.py  hello.py  s3_thumbnail_generator.py  slack_notifications.py
image_processing/helpers/: secrets.py  slackapi.py
image_processing/models/: s3_event.py
tests/: conftest.py  payload.json  test_slackapi.py
utils/: helpers.mk
