[tool.poetry]
name = "image-processing"
version = "1.0.0"
description = "Serverless sample project"
authors = ["Guillaume Bournique"]

[tool.poetry.dependencies]
aws-lambda-powertools = {version = "^1.9.0", extras = ["pydantic", "typing_extensions"]}
Pillow = "^8.3.1"                                   # HPND
python = "3.8.0"                                    # PSF
requests = "^2.22"                                  # Apache 2.0
slackclient = "^2.9.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"                                  # MIT
awscli = "^1.18.197"                                # Apache 2.0
black = "19.10b0"                                   # MIT
cfn-lint = "^0.43.0"                                # MIT
docker = "^4.4.0"                                   # Apache 2.0
isort = "4.3.4"                                     # MIT
pylint = "^2.6.0"                                   # GPL
pytest = "6.0.0"                                    # MIT
pytest-cov = "^2.10.1"                              # MIT
pytest-env = "^0.6.2"                               # MIT
pre-commit = "^2.8.2"                               # MIT
yamllint = "^1.25.0"                                # GNU

[tool.pytest.ini_options]
filterwarnings = '''
    error
    ignore::UserWarning
'''
python_files = ["tests.py", "test_*", "*_tests.py"]
# Ignore python packages in sam-application/bin/ 
addopts = '''
  --strict
  --tb=short
  --ignore=bin/lambda-layer/
  --cov=.
  --cov-branch
  --cov-report=term-missing
  --cov-report=html
  --no-cov-on-fail
  --cov-fail-under=0
'''
env = ["PYTEST_ENABLED=1", "DYNAMODB_TABLE=mock_table", "SQS_NAME=mock_sqs"]

[build-system]
requires = ["wheel", "tomlkit", "poetry>=1.1.3"] # PEP 518
build-backend = "poetry.masonry.api"